--- a/src/main/resources/fxml/basicConnection.fxml
+++ b/src/main/resources/fxml/basicConnection.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="350.0" prefWidth="769.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zzg.mybatis.generator.controller.DbConnectionController">
+<AnchorPane prefHeight="350.0" prefWidth="769.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.taurus.mybatis.generator.controller.DbConnectionController">
 
   <GridPane alignment="CENTER_RIGHT" prefHeight="350.0" prefWidth="769.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
     <columnConstraints>
