--- a/src/main/resources/fxml/newConnection.fxml
+++ b/src/main/resources/fxml/newConnection.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" stylesheets="@../style.css" vgap="0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zzg.mybatis.generator.controller.TabPaneController">
+<GridPane alignment="center" hgap="10" stylesheets="@../style.css" vgap="0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.taurus.mybatis.generator.controller.TabPaneController">
 
   <columnConstraints>
     <ColumnConstraints />
