--- a/src/main/resources/fxml/sshBasedConnection.fxml
+++ b/src/main/resources/fxml/sshBasedConnection.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane stylesheets="@../style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zzg.mybatis.generator.controller.OverSshController">
+<AnchorPane stylesheets="@../style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.taurus.mybatis.generator.controller.OverSshController">
   <children>
     <GridPane fx:id="gridPane" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.topAnchor="15.0">
       <columnConstraints>
